--- a/po/de.po
+++ b/po/de.po
@@ -6,8 +6,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: thunar-tag-renamer-plugin 0.1.0\n"
-"Report-Msgid-Bugs-To: xfce-goodies-dev@lists.berlios.de\n"
-"POT-Creation-Date: 2006-03-01 19:12+0100\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2006-03-23 09:14+0100\n"
 "PO-Revision-Date: 2006-03-01 19:05+0100\n"
 "Last-Translator: Jannis Pohlmann <jannis@xfce.org>\n"
 "Language-Team: German <de@li.org>\n"
@@ -16,46 +16,15 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
-#. display an error dialog
-#: thunar-archive-plugin/tap-provider.c:301
-#: thunar-archive-plugin/tap-provider.c:341
-msgid "Failed to extract files"
-msgstr "Dateien konnte nicht entpackt werden"
+#: ../thunar-tag-renamer-plugin/thunar-sbr-tag-renamer.c:58
+msgid "Track - Artist - Title"
+msgstr "Titelnummer - Interpret - Titel"
 
-#. display an error dialog
-#: thunar-archive-plugin/tap-provider.c:395
-msgid "Failed to create archive"
-msgstr "Archiv konnte nicht erstellt werden"
+#. Naming scheme label
+#: ../thunar-tag-renamer-plugin/thunar-sbr-tag-renamer.c:167
+msgid "Naming _scheme:"
+msgstr "_Schema:"
 
-#. append the "Extract Here" action
-#: thunar-archive-plugin/tap-provider.c:443
-msgid "Extract Here"
-msgstr "Hier entpacken"
-
-#: thunar-archive-plugin/tap-provider.c:444
-msgid "Extract the selected archive in the current folder"
-msgid_plural "Extract the selected archives in the current folder"
-msgstr[0] "Das ausgewählte Archiv ins aktuelle Verzeichnis entpacken"
-msgstr[1] "Die ausgewählten Archive ins aktuelle Verzeichnis entpacken"
-
-#. append the "Extract To..." action
-#: thunar-archive-plugin/tap-provider.c:457
-msgid "Extract To..."
-msgstr "Entpacken nach..."
-
-#: thunar-archive-plugin/tap-provider.c:458
-msgid "Extract the selected archive"
-msgid_plural "Extract the selected archives"
-msgstr[0] "Das ausgewählte Archiv entpacken"
-msgstr[1] "Die ausgewählten Archive entpacken"
-
-#. append the "Create Archive..." action
-#: thunar-archive-plugin/tap-provider.c:474
-msgid "Create Archive..."
-msgstr "Archiv erstellen"
-
-#: thunar-archive-plugin/tap-provider.c:475
-msgid "Create an archive with the selected object"
-msgid_plural "Create an archive with the selected objects"
-msgstr[0] "Ein Archiv mit der ausgewählte Datei erstellen"
-msgstr[1] "Ein Archiv mit den ausgewählten Dateien erstellen"
+#: ../thunar-tag-renamer-plugin/thunar-sbr-tag-renamer.c:347
+msgid "ID3 and Vorbis Tags"
+msgstr "ID3- und Vorbis-Tags"
