--- a/po/thunar-tag-renamer-plugin.pot
+++ b/po/thunar-tag-renamer-plugin.pot
@@ -8,55 +8,23 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-03-01 19:12+0100\n"
+"POT-Creation-Date: 2006-03-23 09:14+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=CHARSET\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=INTEGER; plural=EXPRESSION;\n"
 
-#. display an error dialog
-#: thunar-archive-plugin/tap-provider.c:301
-#: thunar-archive-plugin/tap-provider.c:341
-msgid "Failed to extract files"
+#: ../thunar-tag-renamer-plugin/thunar-sbr-tag-renamer.c:58
+msgid "Track - Artist - Title"
 msgstr ""
 
-#. display an error dialog
-#: thunar-archive-plugin/tap-provider.c:395
-msgid "Failed to create archive"
+#. Naming scheme label
+#: ../thunar-tag-renamer-plugin/thunar-sbr-tag-renamer.c:167
+msgid "Naming _scheme:"
 msgstr ""
 
-#. append the "Extract Here" action
-#: thunar-archive-plugin/tap-provider.c:443
-msgid "Extract Here"
+#: ../thunar-tag-renamer-plugin/thunar-sbr-tag-renamer.c:347
+msgid "ID3 and Vorbis Tags"
 msgstr ""
-
-#: thunar-archive-plugin/tap-provider.c:444
-msgid "Extract the selected archive in the current folder"
-msgid_plural "Extract the selected archives in the current folder"
-msgstr[0] ""
-msgstr[1] ""
-
-#. append the "Extract To..." action
-#: thunar-archive-plugin/tap-provider.c:457
-msgid "Extract To..."
-msgstr ""
-
-#: thunar-archive-plugin/tap-provider.c:458
-msgid "Extract the selected archive"
-msgid_plural "Extract the selected archives"
-msgstr[0] ""
-msgstr[1] ""
-
-#. append the "Create Archive..." action
-#: thunar-archive-plugin/tap-provider.c:474
-msgid "Create Archive..."
-msgstr ""
-
-#: thunar-archive-plugin/tap-provider.c:475
-msgid "Create an archive with the selected object"
-msgid_plural "Create an archive with the selected objects"
-msgstr[0] ""
-msgstr[1] ""
