--- a/TODO
+++ b/TODO
@@ -3,3 +3,5 @@ TODO for thunar-tag-renamer-plugin
 
   * Check if we can rename files to folders, like 
     ARTIST/ALBUM/TITLE.EXT
+  * Add a custom option to the combo box which activates a GtkEntry
+    for a custom naming scheme.
