--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,4 +1,9 @@
 2006-03-23  Jannis Pohlmann <jannis@xfce.org>
 
+  * POTFILES.in, de.po, thunar-tag-renamer-plugin.pot: Updated 
+    translation files.
+
+2006-03-23  Jannis Pohlmann <jannis@xfce.org>
+
   * thunar-tag-renamer-plugin.pot: POT-file updated.
   * de.po: German translations updated.
