* configure.in.in: Rename the plugin, use more recent version of     Thunarx.   * thunar-plugin/tag-renamer.{c,h}: Rename the enum register     function.   * thunar-plugin/*.{c,h}: Renamed classes. Added UI to the audio tags     page.
(Old svn revision: 1219)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2006-03-24  Jannis Pohlmann <jannis@xfce.org>
+
+  * configure.in.in: Rename the plugin, use more recent version of
+    Thunarx.
+  * thunar-plugin/tag-renamer.{c,h}: Rename the enum register 
+    function.
+  * thunar-plugin/*.{c,h}: Renamed classes. Added UI to the audio tags
+    page. 
+
 2006-03-23  Jannis Pohlmann <jannis@xfce.org>
 
   * configure.in.in: Depend on more recent version (0.2.3svn-r20522) of 
