--- a/po/de.po
+++ b/po/de.po
@@ -1,14 +1,14 @@
-# German translations for the thunar-tag-renamer-plugin.
+# German translations for the thunar-media-tags-plugin.
 # Copyright (C) 2006 Jannis Pohlmann <jannis@xfce.org>
-# This file is distributed under the same license as the thunar-tag-renamer-plugin package.
+# This file is distributed under the same license as the thunar-media-tags-plugin package.
 # Jannis Pohlmann <jannis@xfce.org>, 2006.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: thunar-tag-renamer-plugin 0.1.0\n"
+"Project-Id-Version: thunar-media-tags-plugin 0.1.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-03-23 16:51+0100\n"
-"PO-Revision-Date: 2006-03-23 16:52+0100\n"
+"POT-Creation-Date: 2006-03-25 11:58+0100\n"
+"PO-Revision-Date: 2006-03-25 12:00+0100\n"
 "Last-Translator: Jannis Pohlmann <jannis@xfce.org>\n"
 "Language-Team: German <de@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -16,78 +16,236 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
-#: ../thunar-plugin/tag-renamer.c:57
+#: ../thunar-plugin/tag-renamer.c:59
 msgid "Title"
 msgstr "Title"
 
-#: ../thunar-plugin/tag-renamer.c:58
+#: ../thunar-plugin/tag-renamer.c:60
 msgid "Artist - Title"
 msgstr "Interpret - Titel"
 
-#: ../thunar-plugin/tag-renamer.c:59
+#: ../thunar-plugin/tag-renamer.c:61
 msgid "Track - Title"
 msgstr "Titelnummer - Titel"
 
-#: ../thunar-plugin/tag-renamer.c:60
+#: ../thunar-plugin/tag-renamer.c:62
 msgid "Track - Artist - Title"
 msgstr "Titelnummer - Interpret - Titel"
 
-#: ../thunar-plugin/tag-renamer.c:61
+#: ../thunar-plugin/tag-renamer.c:63
 msgid "Track. Title"
 msgstr "Titelnummer. Titel"
 
-#: ../thunar-plugin/tag-renamer.c:62
+#: ../thunar-plugin/tag-renamer.c:64
 msgid "Track. Artist - Title"
 msgstr "Titelnummer. Interpret - Titel"
 
-#: ../thunar-plugin/tag-renamer.c:63
+#: ../thunar-plugin/tag-renamer.c:65
 msgid "Artist - Track - Title"
 msgstr "Interpret - Titelnummer - Titel"
 
-#: ../thunar-plugin/tag-renamer.c:198 ../thunar-plugin/tag-renamer.c:302
-#: ../thunar-plugin/tag-renamer.c:722
+#: ../thunar-plugin/tag-renamer.c:206 ../thunar-plugin/tag-renamer.c:310
+#: ../thunar-plugin/tag-renamer.c:764 ../thunar-plugin/audio-tags-page.c:183
 msgid "Unknown Artist"
 msgstr "Unbekannter Interpret"
 
-#: ../thunar-plugin/tag-renamer.c:211 ../thunar-plugin/tag-renamer.c:303
-#: ../thunar-plugin/tag-renamer.c:773
+#: ../thunar-plugin/tag-renamer.c:219 ../thunar-plugin/tag-renamer.c:311
+#: ../thunar-plugin/tag-renamer.c:815 ../thunar-plugin/audio-tags-page.c:209
 msgid "Unknown Title"
 msgstr "Unbekannter Titel"
 
 #. Naming scheme label
-#: ../thunar-plugin/tag-renamer.c:242
+#: ../thunar-plugin/tag-renamer.c:250
 msgid "Naming _scheme:"
 msgstr "_Schema:"
 
-#: ../thunar-plugin/tag-renamer.c:265
+#: ../thunar-plugin/tag-renamer.c:273
 msgid "Use _underscores"
 msgstr "_Unterstriche verwenden"
 
-#: ../thunar-plugin/tag-renamer.c:267
+#: ../thunar-plugin/tag-renamer.c:275
 msgid ""
 "Activating this option will replace all spaces in the target filename with "
 "underscores."
 msgstr "Mit dieser Option werden alle Leerzeichen durch Unterstriche ersetzt."
 
-#: ../thunar-plugin/tag-renamer.c:272
+#: ../thunar-plugin/tag-renamer.c:280
 msgid "Use _lowercase"
 msgstr "In K_leinbuchstaben umwandeln"
 
-#: ../thunar-plugin/tag-renamer.c:274
+#: ../thunar-plugin/tag-renamer.c:282
 msgid ""
 "If you activate this, the resulting filename will not contain any uppercase "
 "letters."
 msgstr "Konvertiert alle Zeichen in Kleinbuchstaben."
 
-#: ../thunar-plugin/tag-renamer.c:279
+#: ../thunar-plugin/tag-renamer.c:287
 msgid "Default Art_ist:"
 msgstr "Standard_interpret:"
 
-#: ../thunar-plugin/tag-renamer.c:287
+#: ../thunar-plugin/tag-renamer.c:295
 msgid "Text entered in this field is going to replace missing artist tags."
 msgstr ""
 "Hier eingefügter Text ersetzt fehlende Informationen über den Interpret."
 
-#: ../thunar-plugin/tag-renamer.c:565
+#. Edit tags action
+#: ../thunar-plugin/tag-renamer.c:585
+msgid "Edit _Tags"
+msgstr "_Tags bearbeiten"
+
+#: ../thunar-plugin/tag-renamer.c:585
+msgid "Edit ID3/OGG tags of this file."
+msgstr "ID3- und OGG-Tags dieser Datei bearbeiten."
+
+#: ../thunar-plugin/tag-renamer.c:607
 msgid "ID3 and Vorbis Tags"
 msgstr "ID3- und Vorbis-Tags"
+
+#: ../thunar-plugin/audio-tags-page.c:196
+msgid "Unknown Album"
+msgstr "Unbekanntes Album"
+
+#: ../thunar-plugin/audio-tags-page.c:305
+msgid "<b>Track:</b>"
+msgstr "<b>Titelnummer:</b>"
+
+#: ../thunar-plugin/audio-tags-page.c:320
+msgid "Enter the track number here."
+msgstr "Hier die Titelnummer eingeben."
+
+#: ../thunar-plugin/audio-tags-page.c:328
+msgid "<b>Year:</b>"
+msgstr "<b>Jahr:</b>"
+
+#: ../thunar-plugin/audio-tags-page.c:343
+msgid "Enter the release year here."
+msgstr "Hier das Jahr der Veröffentlichung eingeben."
+
+#: ../thunar-plugin/audio-tags-page.c:351
+msgid "<b>Artist:</b>"
+msgstr "<b>Interpret:</b>"
+
+#: ../thunar-plugin/audio-tags-page.c:358
+msgid "Enter the name of the artist or author of this file here."
+msgstr "Hier den Namen des/der Interpreten oder Autors angeben."
+
+#: ../thunar-plugin/audio-tags-page.c:366
+msgid "<b>Title:</b>"
+msgstr "<b>Titel:</b>"
+
+#: ../thunar-plugin/audio-tags-page.c:373
+msgid "Enter the song title here."
+msgstr "Hier den Titel des Liedes oder Dokumentes eingeben."
+
+#: ../thunar-plugin/audio-tags-page.c:380
+msgid "<b>Album:</b>"
+msgstr "<b>Album:</b>"
+
+#: ../thunar-plugin/audio-tags-page.c:387
+msgid "Enter the album/record title here."
+msgstr "Hier den Namen des Albums/der Veröffentlichung eingeben."
+
+#: ../thunar-plugin/audio-tags-page.c:394
+msgid "<b>Comment:</b>"
+msgstr "<b>Kommentar:</b>"
+
+#: ../thunar-plugin/audio-tags-page.c:401
+msgid "Enter your comments here."
+msgstr "Hier einen beliebigen Kommentar einfügen."
+
+#: ../thunar-plugin/audio-tags-page.c:408
+msgid "<b>Genre:</b>"
+msgstr "<b>Genre:</b>"
+
+#: ../thunar-plugin/audio-tags-page.c:415
+msgid "Select or enter the genre of this song here."
+msgstr "Hier ein Genre auswählen oder selbst eingeben."
+
+#. Create and add the save action
+#: ../thunar-plugin/audio-tags-page.c:454
+msgid "_Save"
+msgstr "_Speichern"
+
+#: ../thunar-plugin/audio-tags-page.c:454
+msgid "Save audio tags."
+msgstr "Audio-Tags speichern."
+
+#. Create and add the info action
+#: ../thunar-plugin/audio-tags-page.c:461
+msgid "_Information"
+msgstr "_Informationen"
+
+#: ../thunar-plugin/audio-tags-page.c:461
+msgid "Display more detailed information about this audio file."
+msgstr "Detailliertere Information über diese Audiodatei anzeigen."
+
+#: ../thunar-plugin/audio-tags-page.c:528
+msgid "Audio"
+msgstr "Audio"
+
+#. Set up the dialog
+#: ../thunar-plugin/audio-tags-page.c:564
+msgid "Edit Tags"
+msgstr "Tags bearbeiten"
+
+#. Create dialog
+#: ../thunar-plugin/audio-tags-page.c:992
+msgid "Audio Information"
+msgstr "Audio-Informationen"
+
+#: ../thunar-plugin/audio-tags-page.c:1003
+#, c-format
+msgid "%d:%d Minutes"
+msgstr "%d:%d Minuten"
+
+#: ../thunar-plugin/audio-tags-page.c:1004
+#, c-format
+msgid "%d KBit/s"
+msgstr "%d KBit/s"
+
+#: ../thunar-plugin/audio-tags-page.c:1005
+#, c-format
+msgid "%d Hz"
+msgstr "%d Hz"
+
+#: ../thunar-plugin/audio-tags-page.c:1025
+msgid "<b>Filename:</b>"
+msgstr "<b>Dateiname:</b>"
+
+#: ../thunar-plugin/audio-tags-page.c:1038
+msgid "<b>Filesize:</b>"
+msgstr "<b>Dateigröße:</b>"
+
+#: ../thunar-plugin/audio-tags-page.c:1051
+msgid "<b>MIME Type:</b>"
+msgstr "<b>MIME-Typ:</b>"
+
+#: ../thunar-plugin/audio-tags-page.c:1064
+msgid "<b>Bitrate:</b>"
+msgstr "<b>Bitrate:</b>"
+
+#: ../thunar-plugin/audio-tags-page.c:1077
+msgid "<b>Samplerate:</b>"
+msgstr "<b>Samplerate:</b>"
+
+#: ../thunar-plugin/audio-tags-page.c:1090
+msgid "<b>Channels:</b>"
+msgstr "<b>Kanäle:</b>"
+
+#: ../thunar-plugin/audio-tags-page.c:1103
+msgid "<b>Length:</b>"
+msgstr "<b>Länge:</b>"
+
+#~ msgid "Track:"
+#~ msgstr "Titelnummer:"
+
+#~ msgid "Year:"
+#~ msgstr "Jahr:"
+
+#, fuzzy
+#~ msgid "Artist:"
+#~ msgstr "Standard_interpret:"
+
+#, fuzzy
+#~ msgid "Title:"
+#~ msgstr "Title"
