--- a/README
+++ b/README
@@ -1,17 +1,19 @@
 What is it?
 ===========
 
-The thunar-tag-renamer-plugin is a plugin for the Thunar File Manager, 
+The thunar-media-tags-plugin is a plugin for the Thunar File Manager, 
 which adds ID3/OGG tag support to the bulk rename dialog.
 
 
 Required packages
 =================
 
-thunar-tag-renamer-plugin depends on the following packages:
+thunar-media-tags-plugin depends on the following packages:
 
- - Thunar 1.0 (or a recent revision from SVN)
- - TagLib 1.4 or above
+ - exo >= 0.3.1.3
+ - thunarx >= 0.2.3svn-r20526
+ - thunar-vfs >= 0.2.3svn-r20526
+ - taglib >= 1.4
 
 
 Installation
