--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,10 @@
 2006-03-25  Jannis Pohlmann <jannis@xfce.org>
 
+  * thunar-media-tags-plugin.pot: New strings merged.
+  * de.po: German translations updated.
+
+2006-03-25  Jannis Pohlmann <jannis@xfce.org>
+
   * ja.po: Japanese translations by Daichi Kawahata added.
 
 2006-03-25  Jannis Pohlmann <jannis@xfce.org>
