--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-03-26  Daichi Kawahata <daichi@xfce.org>
+
+  * de.po, el.po, hu.po, ja.po: Updated. Discarded obsolete
+    translations.
+
 2006-03-25  Jannis Pohlmann <jannis@xfce.org>
 
   * thunar-media-tags-plugin.pot: New strings merged.
