--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,6 @@
 2006-03-26  Daichi Kawahata <daichi@xfce.org>
 
+  * ja.po: Updated Japanese translations.
   * de.po, el.po, hu.po, ja.po: Updated. Discarded obsolete
     translations.
 
