--- a/po/ja.po
+++ b/po/ja.po
@@ -1,3 +1,5 @@
+# $Id$
+#
 # Japanese translations for thunar-media-tags-plugin package.
 # Copyright (C) 2006 Jannis Pohlmann.
 # This file is distributed under the same license as
@@ -9,7 +11,7 @@ msgstr ""
 "Project-Id-Version: thunar-media-tags-plugin 0.1.0svn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-03-25 23:55+0100\n"
-"PO-Revision-Date: 2006-03-25 23:40+0900\n"
+"PO-Revision-Date: 2006-03-26 13:39+0900\n"
 "Last-Translator: Daichi Kawahata <daichi@xfce.org>\n"
 "Language-Team: Japanese <xfce-users-jp@ml.fdiary.net>\n"
 "MIME-Version: 1.0\n"
@@ -48,12 +50,11 @@ msgstr "アーティスト - 曲 - タイトル"
 #. Format label
 #: ../thunar-plugin/tag-renamer.c:223
 msgid "_Format:"
-msgstr ""
+msgstr "形式(_F):"
 
 #: ../thunar-plugin/tag-renamer.c:246
-#, fuzzy
 msgid "_Underscores"
-msgstr "アンダースコアを使う(_U)"
+msgstr "アンダースコア(_U)"
 
 #: ../thunar-plugin/tag-renamer.c:248
 msgid ""
@@ -64,12 +65,10 @@ msgstr ""
 "き換えます。"
 
 #: ../thunar-plugin/tag-renamer.c:253
-#, fuzzy
 msgid "_Lowercase"
-msgstr "小文字を使う(_L)"
+msgstr "小文字(_L)"
 
 #: ../thunar-plugin/tag-renamer.c:255
-#, fuzzy
 msgid ""
 "If you activate this, the resulting filename will only contain lowercase "
 "letters."
@@ -96,9 +95,8 @@ msgid "Edit ID3/OGG tags of this file."
 msgstr "このファイルの ID3/OGG タグを編集します。"
 
 #: ../thunar-plugin/tag-renamer.c:545
-#, fuzzy
 msgid "Audio Tags"
-msgstr "タグを編集"
+msgstr "オーディオタグ"
 
 #: ../thunar-plugin/audio-tags-page.c:196
 msgid "Unknown Album"
