--- a/po/hu.po
+++ b/po/hu.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: thunar-media-tags-plugin 0.1.0svn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-03-25 23:55+0100\n"
-"PO-Revision-Date: 2006-03-23 17:07+0100\n"
-"Last-Translator: SZERVÁC Attila <sas@321.hu>\n"
+"PO-Revision-Date: 2006-03-27 03:05+0100\n"
+"Last-Translator: SZERVÑC Attila <sas@321.hu>\n"
 "Language-Team: Hungarian\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -49,35 +49,32 @@ msgstr "Művész - Sorszám - Cím"
 #. Format label
 #: ../thunar-plugin/tag-renamer.c:223
 msgid "_Format:"
-msgstr ""
+msgstr "_Formátum:"
 
 #: ../thunar-plugin/tag-renamer.c:246
 msgid "_Underscores"
-msgstr ""
+msgstr "_Aláhúzások"
 
 #: ../thunar-plugin/tag-renamer.c:248
-msgid ""
-"Activating this option will replace all spaces in the target filename with "
-"underscores."
+msgid "Activating this option will replace all spaces in the target filename with underscores."
 msgstr "E lehetőség a célfájl nevében aláhúzásra cseréli a szóközöket."
 
 #: ../thunar-plugin/tag-renamer.c:253
 msgid "_Lowercase"
-msgstr ""
+msgstr "_kisbetű"
 
 #: ../thunar-plugin/tag-renamer.c:255
-#, fuzzy
-msgid ""
-"If you activate this, the resulting filename will only contain lowercase "
-"letters."
-msgstr "Használata esetén a fájlok nevében nem lesznek Nagybetűk."
+msgid "If you activate this, the resulting filename will only contain lowercase letters."
+msgstr "Használata esetén a fájl nevében nem lesz Nagybetű."
 
-#: ../thunar-plugin/tag-renamer.c:264 ../thunar-plugin/tag-renamer.c:702
+#: ../thunar-plugin/tag-renamer.c:264
+#: ../thunar-plugin/tag-renamer.c:702
 #: ../thunar-plugin/audio-tags-page.c:183
 msgid "Unknown Artist"
 msgstr "Ismeretlen művész"
 
-#: ../thunar-plugin/tag-renamer.c:265 ../thunar-plugin/tag-renamer.c:750
+#: ../thunar-plugin/tag-renamer.c:265
+#: ../thunar-plugin/tag-renamer.c:750
 #: ../thunar-plugin/audio-tags-page.c:209
 msgid "Unknown Title"
 msgstr "Ismeretlen cím"
@@ -85,98 +82,97 @@ msgstr "Ismeretlen cím"
 #. Edit tags action
 #: ../thunar-plugin/tag-renamer.c:523
 msgid "Edit _Tags"
-msgstr ""
+msgstr "_Tag-ek szerkesztése"
 
 #: ../thunar-plugin/tag-renamer.c:523
 msgid "Edit ID3/OGG tags of this file."
-msgstr ""
+msgstr "OGG/id3 tag-ek szerkesztése"
 
 #: ../thunar-plugin/tag-renamer.c:545
 msgid "Audio Tags"
-msgstr ""
+msgstr "Hang tag-ek."
 
 #: ../thunar-plugin/audio-tags-page.c:196
-#, fuzzy
 msgid "Unknown Album"
-msgstr "Ismeretlen cím"
+msgstr "Ismeretlen album"
 
 #: ../thunar-plugin/audio-tags-page.c:305
 msgid "<b>Track:</b>"
-msgstr ""
+msgstr "<b>Track:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:320
 msgid "Enter the track number here."
-msgstr ""
+msgstr "Írd ide a track sorszámát"
 
 #: ../thunar-plugin/audio-tags-page.c:328
 msgid "<b>Year:</b>"
-msgstr ""
+msgstr "<b>Év:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:343
 msgid "Enter the release year here."
-msgstr ""
+msgstr "Ide írd a kiadási évet"
 
 #: ../thunar-plugin/audio-tags-page.c:351
 msgid "<b>Artist:</b>"
-msgstr ""
+msgstr "<b>Művész:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:358
 msgid "Enter the name of the artist or author of this file here."
-msgstr ""
+msgstr "Írd ide a mű szerzőjének vagy a mű előadójának nevét"
 
 #: ../thunar-plugin/audio-tags-page.c:366
 msgid "<b>Title:</b>"
-msgstr ""
+msgstr "<b>Cím:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:373
 msgid "Enter the song title here."
-msgstr ""
+msgstr "Írd ide a dal címét"
 
 #: ../thunar-plugin/audio-tags-page.c:380
 msgid "<b>Album:</b>"
-msgstr ""
+msgstr "<b>Album:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:387
 msgid "Enter the album/record title here."
-msgstr ""
+msgstr "Írd ide az album/felvétel címét"
 
 #: ../thunar-plugin/audio-tags-page.c:394
 msgid "<b>Comment:</b>"
-msgstr ""
+msgstr "<b>Megjegyzés:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:401
 msgid "Enter your comments here."
-msgstr ""
+msgstr "Írd ide megjegyzéseidet"
 
 #: ../thunar-plugin/audio-tags-page.c:408
 msgid "<b>Genre:</b>"
-msgstr ""
+msgstr "<b>Műfaj:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:415
 msgid "Select or enter the genre of this song here."
-msgstr ""
+msgstr "Válaszd ki vagy írd be e dal műfaját,"
 
 #. Create and add the save action
 #: ../thunar-plugin/audio-tags-page.c:454
 msgid "_Save"
-msgstr ""
+msgstr "_Mentés"
 
 #: ../thunar-plugin/audio-tags-page.c:454
 msgid "Save audio tags."
-msgstr ""
+msgstr "Hang tag-ek mentése"
 
 #. Create and add the info action
 #: ../thunar-plugin/audio-tags-page.c:461
 msgid "_Information"
-msgstr ""
+msgstr "_Információ"
 
 #: ../thunar-plugin/audio-tags-page.c:461
 msgid "Display more detailed information about this audio file."
-msgstr ""
+msgstr "Részletesebb információk e hangfájlról."
 
 #: ../thunar-plugin/audio-tags-page.c:528
 msgid "Audio"
-msgstr ""
+msgstr "Hang"
 
 #. Set up the dialog
 #: ../thunar-plugin/audio-tags-page.c:564
@@ -186,47 +182,48 @@ msgstr ""
 #. Create dialog
 #: ../thunar-plugin/audio-tags-page.c:992
 msgid "Audio Information"
-msgstr ""
+msgstr "Hang információ"
 
 #: ../thunar-plugin/audio-tags-page.c:1003
 #, c-format
 msgid "%d:%d Minutes"
-msgstr ""
+msgstr "%d:%d perc"
 
 #: ../thunar-plugin/audio-tags-page.c:1004
 #, c-format
 msgid "%d KBit/s"
-msgstr ""
+msgstr "%d KBit/s"
 
 #: ../thunar-plugin/audio-tags-page.c:1005
 #, c-format
 msgid "%d Hz"
-msgstr ""
+msgstr "%d Hz"
 
 #: ../thunar-plugin/audio-tags-page.c:1025
 msgid "<b>Filename:</b>"
-msgstr ""
+msgstr "<b>Fájlnév:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:1038
 msgid "<b>Filesize:</b>"
-msgstr ""
+msgstr "<b>Fájlméret:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:1051
 msgid "<b>MIME Type:</b>"
-msgstr ""
+msgstr "<b>MIME Típus:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:1064
 msgid "<b>Bitrate:</b>"
-msgstr ""
+msgstr "<b>Bitráta:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:1077
 msgid "<b>Samplerate:</b>"
-msgstr ""
+msgstr "<b>Mintavétel:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:1090
 msgid "<b>Channels:</b>"
-msgstr ""
+msgstr "<b>Csatornák:</b>"
 
 #: ../thunar-plugin/audio-tags-page.c:1103
 msgid "<b>Length:</b>"
-msgstr ""
+msgstr "<b>Hossz:</b>"
+
