--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-04-02  Daichi Kawahata <daichi@xfce.org>
+
+  * fr.po: Added French translations by Stephane Roy
+    <sroy@j2n.net>.
+
 2006-03-26  Daichi Kawahata <daichi@xfce.org>
 
   * ja.po: Updated Japanese translations.
