* configure.in.in: Added pl to the list of translations. 	* thunar-plugin/tag-renamer.{c,h}: Rename everyhing that has to do 	  with "scheme" to "format", including types, strings and properties. 	* thunar-plugin/tag-renamer.c: Remove "artist" and "title" 	  properties. Remove "default artist" entry as tags can be easily 	  edited now using the renamer context menu. Anyway, missing artist 	  and title tags are still replaced with "Unknown Artist" and 	  "Unknown Title". Make check button labels shorter. 	* configure.in.in: Japanese translation added. 	* thunar-plugin/audio-tags-page.c: Implement "info" action, which 	  displays a dialog with more detailed audio information (bitrate, 	  samplerate, length etc.). 	* thunar-plugin/audio-tags-page.c: Add GTK_STOCK_INFO button on 	  pages with save button. Remove dialog separator in order to be 	  consistent with other Xfce dialogs. 	* thunar-plugin/media-tags-provider.{c,h}: Add 	  media_tags_get_audio_file_supported() method for checking if a file 	  is supported by the audio part of the media-tags plugin. Alter 	  media_tags_provider_get_pages() to use the new method. 	* thunar-plugin/audio-tags-page.{c,h}: Add 	  audio_tags_page_dialog_new() for creating a page embedded in a 	  dialog. This makes it possible to edit tags from the bulk renamer. 	* thunar-plugin/tag-renamer.c: Implement thunarx_renamer_get_actions() 	  in tag_renamer_get_actions() in order to return an "Edit Tags" 	  entry for audio files in the bulk renamer. 	* thunar-plugin/audio-tags-page.{c,h}: Add "show-save-button" 	  property and "save" action to AudioTagsPage. 	  Add convenience method audio_tags_page_new_with_save_button(). 	* thunar-plugin/audio-tags-page.c: Strip leading and trailing 	  whitespaces from all tags before displaying them. Compare old 	  to new values before saving. Make page insensitive when saving 	  until the ::changed signal is emitted again. 	* thunar-plugin/audio-tags-page.c: Fix timeout id problem. 	* thunar-plugin/audio-

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,47 +1,52 @@
-2006-04-02  Daichi Kawahata <daichi@xfce.org>
+2006-04-08	Daichi Kawahata <daichi@xfce.org>
 
-  * fr.po: Added French translations by Stephane Roy
-    <sroy@j2n.net>.
+	* pl.po: Added Polish translations by Piotr Malinski
+	  <admin@rk.edu.pl>.
 
-2006-03-26  Daichi Kawahata <daichi@xfce.org>
+2006-04-02	Daichi Kawahata <daichi@xfce.org>
 
-  * ja.po: Updated Japanese translations.
-  * de.po, el.po, hu.po, ja.po: Updated. Discarded obsolete
-    translations.
+	* fr.po: Added French translations by Stephane Roy
+	  <sroy@j2n.net>.
 
-2006-03-25  Jannis Pohlmann <jannis@xfce.org>
+2006-03-26	Daichi Kawahata <daichi@xfce.org>
 
-  * thunar-media-tags-plugin.pot: New strings merged.
-  * de.po: German translations updated.
+	* ja.po: Updated Japanese translations.
+	* de.po, el.po, hu.po, ja.po: Updated. Discarded obsolete
+	  translations.
 
-2006-03-25  Jannis Pohlmann <jannis@xfce.org>
+2006-03-25	Jannis Pohlmann <jannis@xfce.org>
 
-  * thunar-media-tags-plugin.pot: New strings merged.
-  * de.po: German translations updated.
+	* thunar-media-tags-plugin.pot: New strings merged.
+	* de.po: German translations updated.
 
-2006-03-25  Jannis Pohlmann <jannis@xfce.org>
+2006-03-25	Jannis Pohlmann <jannis@xfce.org>
 
-  * ja.po: Japanese translations by Daichi Kawahata added.
+	* thunar-media-tags-plugin.pot: New strings merged.
+	* de.po: German translations updated.
 
-2006-03-25  Jannis Pohlmann <jannis@xfce.org>
+2006-03-25	Jannis Pohlmann <jannis@xfce.org>
 
-  * thunar-media-tags-plugin.pot: Merge new strings.
-  * de.po: Updated German translations.
+	* ja.po: Japanese translations by Daichi Kawahata added.
 
-2006-03-23  Jannis Pohlmann <jannis@xfce.org>
+2006-03-25	Jannis Pohlmann <jannis@xfce.org>
 
-  * el.po: Greek translations by Stavros Giannouris added.
+	* thunar-media-tags-plugin.pot: Merge new strings.
+	* de.po: Updated German translations.
 
-2006-03-23  Jannis Pohlmann <jannis@xfce.org>
+2006-03-23	Jannis Pohlmann <jannis@xfce.org>
 
-  * hu.po: Hungarian translation by SZERVÑC Attila added.
+	* el.po: Greek translations by Stavros Giannouris added.
 
-2006-03-23  Jannis Pohlmann <jannis@xfce.org>
+2006-03-23	Jannis Pohlmann <jannis@xfce.org>
 
-  * POTFILES.in, de.po, thunar-tag-renamer-plugin.pot: Updated 
-    translation files.
+	* hu.po: Hungarian translation by SZERVÑC Attila added.
 
-2006-03-23  Jannis Pohlmann <jannis@xfce.org>
+2006-03-23	Jannis Pohlmann <jannis@xfce.org>
 
-  * thunar-tag-renamer-plugin.pot: POT-file updated.
-  * de.po: German translations updated.
+	* POTFILES.in, de.po, thunar-tag-renamer-plugin.pot: Updated 
+	  translation files.
+
+2006-03-23	Jannis Pohlmann <jannis@xfce.org>
+
+	* thunar-tag-renamer-plugin.pot: POT-file updated.
+	* de.po: German translations updated.
