* el.po: Updated Greek translations.
(Old svn revision: 1312)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-04-08	Jannis Pohlmann <jannis@xfce.org>
+
+	* el.po: Updated Greek translations.
+
 2006-04-08	Daichi Kawahata <daichi@xfce.org>
 
 	* pl.po: Added Polish translations by Piotr Malinski
