--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-04-09	Jannis Pohlmann <jannis@xfce.org>
+
+	* zh_TW.pl: Traditional Chinese translations by Hydonsingore 
+	  Cia <hydonsingore@mail.educities.edu.tw> added.
+
 2006-04-08	Jannis Pohlmann <jannis@xfce.org>
 
 	* el.po: Updated Greek translations.
