--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-04-09	Jannis Pohlmann <jannis@xfce.org>
+
+	* autogen.sh, configure.in.in, po/LINGUAS: Added @LINGUAS@ 
+	  substitution so we only have to edit po/LINGUAS when new
+	  translations are added.
+	 
 2006-04-08	Jannis Pohlmann <jannis@xfce.org>
 
 	* configure.in.in: Added zh_TW (traditional Chinese) to the 
