--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,11 @@
+2006-04-09	Daichi Kawahata <daichi@xfce.org>
+
+	* ru.po: Added Russian translations by Andrey Fedoseev
+	  <andrey.fedoseev@gmail.com>.
+
 2006-04-09	Jannis Pohlmann <jannis@xfce.org>
 
-	* zh_TW.pl: Traditional Chinese translations by Hydonsingore 
+	* zh_TW.pl: Traditional Chinese translations by Hydonsingore
 	  Cia <hydonsingore@mail.educities.edu.tw> added.
 
 2006-04-08	Jannis Pohlmann <jannis@xfce.org>
