--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-04-22	Daichi Kawahata <daichi@xfce.org>
+
+	* ca.po: Added Catalan translations by Carles Munoz
+	  Gorriz <carlesmu@internautas.org>.
+
 2006-04-09	Daichi Kawahata <daichi@xfce.org>
 
 	* ru.po: Added Russian translations by Andrey Fedoseev
@@ -5,7 +10,7 @@
 
 2006-04-09	Jannis Pohlmann <jannis@xfce.org>
 
-	* zh_TW.pl: Traditional Chinese translations by Hydonsingore
+	* zh_TW.po: Traditional Chinese translations by Hydonsingore
 	  Cia <hydonsingore@mail.educities.edu.tw> added.
 
 2006-04-08	Jannis Pohlmann <jannis@xfce.org>
