--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-06-17	Jannis Pohlmann <jannis@xfce.org>
+
+	* thunar-plugin/*.{c,h}: Fix license headers.
+
 2006-04-09	Jannis Pohlmann <jannis@xfce.org>
 
 	* autogen.sh, configure.in.in, po/LINGUAS: Added @LINGUAS@ 
