--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-07-20  Jean-François Wauthy <pollux@xfce.org>
+
+	* fr.po: Updated French translations by Maximilian Schleiss
+	<maxschleiss@bluewin.ch>
+
 2006-04-23  Daichi Kawahata <daichi@xfce.org>
 
 	* LINGUAS, eu.po: Added Basque translations by Piarres Beobide
